<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PLC_TASK_INFORMATION" Id="{fc78d684-50fb-42d4-bc0c-3eb0a3d36e32}">
    <Declaration><![CDATA[TYPE ST_PLC_TASK_INFORMATION EXTENDS PlcTaskSystemInfo :
STRUCT
	tCycleTime 	: TIME; 	// Current task cycle time
	tlCycleTime : LTIME; 	// Current task cycle time in LTIME
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>